# homorphic-encrpytion-notes

./: README.md  basic-homomorphic-encryption-overview.tex
assignments/: assignment 1.tex  assignment 2.tex  assignment 3.tex  assignment 4.tex
helib_demo/: CMakeCache.txt  CMakeLists.txt  README.md  build.sh  ckks_demo.cpp
helib_demo/tutorial/: 01_ckks_basics.cpp
notes/: Lecture 1.ipynb  Lecture 2.ipynb  Lecture 3.ipynb  lecture 3.tex  lecture 4.tex  lecture 5.tex  lecture 6.tex  patrick presentation.tex
